tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_false_departpos/errors.duarouter
Error: Invalid departPos definition for vehicle '1';
 must be one of ("random", "random_free", "free", "base", "last" or a float)
Quitting (on error).
